# ai-engineering

./: README.md  gemini.ipynb  pydantic_basic.ipynb  pydantic_example.py  pyproject.toml
exports/: image_description.md
